--- a/lvgl_touch/Kconfig
+++ b/lvgl_touch/Kconfig
@@ -183,6 +183,17 @@ menu "LVGL Touch controller"
     menu "Touchpanel Configuration (FT6X06)"
         depends on LV_TOUCH_CONTROLLER_FT6X06
 
+        config LV_FT6X36_ENABLE_IRQ
+            bool
+            prompt "Enable FT6X36 IRQ signal"
+            default n
+
+        config LV_FT6X36_IRQ_IO
+            int
+            depends on LV_FT6X36_ENABLE_IRQ
+            prompt "FT6X36 IRQ signal IO"
+            default -1
+
         config LV_FT6X36_SWAPXY
             bool
             prompt "Swap X with Y coordinate."
